src/styles/_data-table.scss
.fr-data-table__wrapper {
  width: 100%;
  overflow: scroll;
  display: inline-block;
}

.fr-data-table__header {
  font-size: 20px;
  padding: 12px 14px 12px 24px;
  height: 22px;
  display: flex;

  transition-property: background;
  transition-duration: .3s;
  transition-timing-function: linear;

  &-buttons {
    margin-left: auto;
  }
  &-btn {
    margin-left: 24px;
    color: rgba(0,0,0,.56);
    cursor: pointer;
  }

  &--checked {
    background: #E8EAF6;
  }
}
.fr-data-table__footer {
  line-height: 56px;
  padding-right: 12px;
  font-size: 12px;
  color: rgba(0,0,0,.56);
  display: flex;
  justify-content: flex-end;
  &-select {
    width: 64px;
    .fr-select .fr-select__text {
      font-size: 12px;
      border: none;
      text-indent: 28px;
    }

    &-label {
      padding-left: 32px;
    }
  }
  &-left-arrow {
    margin-left: 32px;
    width: 12px;
    cursor: pointer;
  }
  &-right-arrow {
    margin-left: 24px;
    width: 12px;
    cursor: pointer;
  }
  &-rows-info {
    margin-left: 32px;
  }
}

.fr-data-table {
  width: 100%;
  border-collapse: collapse;
  // table-layout: fixed;

  &__column {
    &--string {
    }
    &--number {
    }
  }

  &__thead {
    &-row {
      border-bottom: 1px solid #EAEAEA;
      height: 56px;
      color: rgba(0,0,0, .56);
      font-size: 12px;
      font-weight: 100;
    }
    &-checkbox {
      padding-left: 24px;
      width: 18px;
    }
    &-column {
      &--string {
        text-align: left;
        padding-left: 56px;
        padding-right: 0;
      }
      &--number {
        text-align: right;
        padding-left: 56px;
        padding-right: 0;
      }
      &--first {
        padding-left: 24px;
        padding-right: 0;
      }
      &:last-child {
        padding-right: 24px;
      }
    }
  }

  &__tbody {
    &-row {
      border-bottom: 1px solid #EAEAEA;
      height: 48px;
      font-size: 13px;
      color: rgba(0,0,0,.87);

      &:hover {
        background: #EEEEEE;
      }
    }
    &-checkbox {
      padding-left: 24px;
      width: 0;
    }
    &-cell {
      white-space: nowrap;
      &--string {
        text-align: left;
        padding-left: 56px;
        padding-right: 0;
      }
      &--number {
        text-align: right;
        padding-left: 56px;
        padding-right: 0;
      }
      &:first-child {
        padding-left: 24px;
        padding-right: 0;
      }
      &:last-child {
        padding-right: 24px;
      }
      &--first {
        padding-left: 24px;
        padding-right: 0;
      }
    }
    &-value {
      padding: 0;
    }
  }
}

